@@ -33,6 +33,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix task distribution calculations with --ntasks-per-gpu specified without
     an explicit --ntasks value.
  -- Fix job arrays not showing correct features.
+ -- Fix job having wrong features used when using preferred features.
 
 * Changes in Slurm 22.05.4
 ==========================
